# cubeeye-rtsp-client

./: CMakeLists.txt  README.md  changelog.txt
BasicUsageEnvironment/: CMakeLists.txt
UsageEnvironment/: CMakeLists.txt
groupsock/: CMakeLists.txt
liveMedia/: CMakeLists.txt
meere/: CMakeLists.txt  Live555ClientSource.cpp
